k8s/base/traefik/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web
spec:
  type: LoadBalancer
  ports:
    - name: web
      targetPort: web
      port: 80
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  labels:
    app: traefik-dashboard
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: traefik
