k8s/base/traefik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dashboard.k8s.test`)
      services:
        - kind: Service
          name: traefik-dashboard
          port: 8080
